<?xml version="1.0"?>
<package>
    <name>ftl_bridge_msgs</name>
    <version>0.1.0</version>
    <description>ROS Message Package for FTL Bridge</description>
    <maintainer email="zhiquan.yeo@nospam-gmail.com">ZQ Yeo</maintainer>
    <license>BSD</license>
    <url type="website">https://github.com/ftl-robots/ftl_bridge_msgs</url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
    <export></export>
</package>